시작, 종료화면 버튼 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
     '메인화면'
+    <string name="game_title_C">SNACK</string>
     <string name="game_title_S">SNAKE</string>
-    <string name="game_title_G">GAME</string>
     <string name="button_start">게임시작</string>
     <string name="button_option">설정</string>
     <string name="button_end">게임종료</string>
